--- a/frontend/src/scss/theme/_input.scss
+++ b/frontend/src/scss/theme/_input.scss
@@ -2,7 +2,7 @@
 
 $input-font-size: rem(14);
 $input-font-size-sm: rem(12);
-$input-padding-y: em(6);
+$input-padding-y: em(7);
 $input-padding-x: em(8);
 $input-padding-x-sm: em(10);
 $input-padding-y-sm: em(10);
